--- a/sections/PCB.tex
+++ b/sections/PCB.tex
@@ -12,6 +12,9 @@ Se imprimió una primera versión y se realizaron correcciones en base a los res
     \label{fig:pcb-implementada}
 \end{figure}
 
+A continuación, se detallan todos los criterios aplicados para la inclusión de cada componente en el circuito impreso en base a las recomendaciones 
+proporcionadas por la cátedra, los integrantes del ATEI y las especificadas en las hojas de datos de los circuitos integrados.
+
 \paragraph{Orificios}
 
 Los orificios se hicieron de $0.8mm$, independiente del componente. En caso de necesitar uno más grande se lo ensanchó con mecha.
