--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -1,30 +1,22 @@
 \section{Introducción}
 
-% Objetivos específicos. Contenido de los capítulos o secciones 
-% Finaliza con un párrafo que resuma el contenido del informe
-
-% En las siguientes secciones se detallarán cada una de estas etapas,
-% enumerando los problemas encontrados y las soluciones propuestas.
-
-% Marco teórico
-% En esta sección se presenta el desarrollo llevado a cabo para lograr los objetivos propuestos, haciendo énfasis en los aspectos teóricos que fundamentan el proyecto.
-%En esta sección se desarrollarán los conceptos teóricos necesarios para entender el funcionamiento del cargador.
-
-% PCB
-% A continuación se detallan todos los criterios aplicados para la inclusión de cada componente en el circuito impreso en base a las recomendaciones 
-% proporcionadas por la cátedra, los integrantes del ATEI y las especificadas en las hojas de datos de los circuitos integrados.
-
-% Simulaciones del prototipo
-% En esta sección se comparan las formas de onda obtenidas con el circuito una vez implementado, con las simulaciones realizadas para el prototipo.
-
-El cargador de baterías de Litio-Ion es un dispositivo electrónico utilizado para suministrar, mediante diferentes etapas, la corriente y tensión continua necesaria para las celdas que componen una batería recargable de forma tal que la misma recupere su carga energética.
-
-El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo,
+El proyecto surge de la necesidad de cargar la batería de litio de una bicicleta eléctrica con asistencia al pedaleo,
 complementando los proyectos realizados por los alumnos de la cátedra de Proyecto Final durante el año 2021.
+El objetivo principal es diseñar un dispositivo que sea capaz de realizar una carga completa. 
 
 El uso de las baterías de litio está en constante crecimiento y,
 debido a que es un material altamente reactivo,
 es necesario que el proceso de carga se realice de manera correcta,
 con la finalidad de ofrecer una carga segura y eficaz.
 
-El objetivo principal es diseñar un dispositivo que sea capaz de realizar una carga completa de una batería en buen estado.
+El cargador de baterías es un dispositivo electrónico utilizado para suministrar, mediante diferentes etapas, la corriente y tensión continua necesaria para las celdas que componen a una batería recargable, de forma tal que la misma recupere su carga energética.
+
+A continuación se especifican brevemente los contenidos de cada una de las secciones del informe. 
+En la sección 2 se introducen los objetivos del proyecto, y en la siguiente se detallan las actividades realizadas y la metodología adoptada para alcanzar las metas y los objetivos propuestos.
+En el capítulo 4 se analizan todos los conceptos teóricos necesarios para entender el funcionamiento del cargador y que permiten su desarrollo.
+La sección 5 presenta las simulaciones del cargador de baterías de 36V y analiza el modelo de batería utilizado. 
+En los capítulos 6 y 7 se introduce el prototipo implementado y se realizan los cálculos necesarios para la elección de cada componente.
+La sección 8 detalla todos los criterios aplicados en el diseño del circuito impreso. 
+En el capítulo 9 se enumeran los problemas encontrados y las soluciones propuestas durante su implementación. 
+La sección 10 presenta las mediciones obtenidas y sus comparaciones con las simulaciones realizadas para el prototipo. 
+Finalmente, el último capítulo contiene las conclusiones del proyecto. 
