--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 
-% Objetivos generales, resultados y conclusiones más importantes
+% Resultados y conclusiones más importantes
 
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
     describiendo las decisiones tomadas durante la etapa de diseño, 
@@ -12,5 +12,7 @@
     Su potencia máxima es de 282W.
     Se utilizó una topología forward doble switch para la etapa de conversión DC-DC
     y un circuito integrado para la etapa de control.
+
+    
 
 \end{abstract}
