--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -34,7 +34,7 @@ Para disminuir sus pérdidas y obtener una mayor eficiencia se modificó la estr
 Mediante el sensado de tensión y corriente en la carga y un circuito de realimentación se modifica el ciclo de trabajo y se evita una etapa posterior limitadora de corriente.
 
 %incluir esquema de cargador
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{images/esquema_cargador_v2.png}
     \caption{Esquema del cargador}
