--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,7 +1,5 @@
 \begin{abstract}
 
-% Resultados y conclusiones más importantes
-
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
     describiendo las decisiones tomadas durante la etapa de diseño, 
     los problemas afrontados y las respectivas soluciones propuestas.
@@ -13,6 +11,7 @@
     Se utilizó una topología forward doble switch para la etapa de conversión DC-DC
     y un circuito integrado para la etapa de control.
 
-    
+    Finalmente se implementó un prototipo que incluye un generador de señal PWM, el convertidor de tensión continua y su driver. 
+    Se realizaron mediciones de las señales de tensión y corriente sobre los elementos, operando a lazo abierto con un ciclo de trabajo fijo, y se las compararon con las simulaciones realizadas. 
 
 \end{abstract}
