IT'S REALLY DONE

--- a/sections/PCB.tex
+++ b/sections/PCB.tex
@@ -8,7 +8,7 @@ Se imprimió una primera versión y se realizaron correcciones en base a los res
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/pcb-implementada.jpeg}
-    \caption{Placa impresa antes de soldar.}
+    \caption{Placa impresa previo a la soldadura.}
     \label{fig:pcb-implementada}
 \end{figure}
 
