--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -344,7 +344,7 @@ $$ L=R\times\tau=468\mu H $$
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\textwidth]{images/osc-inductor-ts.jpeg}
-    \caption{Medición de la inductancia mediante tiempo de subida}
+    \caption{Medición de la inductancia mediante el tiempo de subida}
     \label{fig:osc-inductor-ts}
 \end{figure}
 
@@ -382,7 +382,7 @@ $$ Q_g=26nC $$
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\textwidth]{images/irf840/vgs-vs-qg.png}
-    \caption{Curva típica de tensión entre \textit{gate} y \textit{source} vs. carga del terminal gate}
+    \caption{Curva de tensión entre \textit{gate} y \textit{source} vs. carga del terminal \textit{gate} del IRF840}
     \label{fig:vgs-vs-qg}
 \end{figure}
 
