--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -407,7 +407,7 @@ se encuentran apagados, lo cual permite utilizar transistores de menores prestac
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/hart/forward_doble_switch_closed.png}
-    \caption{}
+    \caption{Convertidor forward doble switch cuando los interruptores están cerrados}
     \label{fig:forward_doble_switch_closed}
 \end{figure}
 
@@ -420,7 +420,7 @@ Además la corriente que circula por la inductancia magnetizante se incrementa c
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/hart/forward_doble_switch_open.png}
-    \caption{}
+    \caption{Convertidor forward doble switch cuando los interruptores están abiertos}
     \label{fig:forward_doble_switch_open}
 \end{figure}
 
